appstore-envoy-kelon-kube-mgmt-example/manifests/appstore-deployment.yml
# Deploy Appstore-Backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appstore-backend
  namespace: appstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appstore-backend
  template:
    metadata:
      labels:
        app: appstore-backend
    spec:
      initContainers:
        - name: proxy-init
          image: openpolicyagent/proxy_init:v2
          args: ["-p", "8000", "-u", "1111"]
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
            runAsNonRoot: false
            runAsUser: 0
      containers:
        - name: appstore-backend
          image: kelonio/spring-vue-appstore-backend:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          envFrom:
            - configMapRef:
                name: appstore-backend-config
        - name: envoy
          image: envoyproxy/envoy:v1.10.0
          securityContext:
            runAsUser: 1111
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          securityContext:
            runAsUser: 1111
          volumeMounts:
          - readOnly: true
            mountPath: /config
            name: proxy-config
          args:
          - "envoy"
          - "--config-path"
          - "/config/envoy.yaml"
          - "-l"
          - "debug"
      volumes:
        - name: proxy-config
          configMap:
            name: proxy-config
---
# Deploy Appstore-Frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appstore-frontend
  namespace: appstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appstore-frontend
  template:
    metadata:
      labels:
        app: appstore-frontend
    spec:
      containers:
        - name: appstore-frontend
          image: kelonio/spring-vue-appstore-frontend:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          envFrom:
            - configMapRef:
                name: appstore-frontend-config
---
# Add service that exposes Backend
apiVersion: v1
kind: Service
metadata:
  name: appstore-backend-service
  namespace: appstore
  labels:
    name: appstore-backend-service
spec:
  selector:
    app: appstore-backend
  ports:
  - port: 8080
    protocol: TCP
---
# Add service that exposes Frontend
apiVersion: v1
kind: Service
metadata:
  name: appstore-frontend-service
  namespace: appstore
  labels:
    name: appstore-frontend-service
spec:
  selector:
    app: appstore-frontend
  ports:
  - port: 80
    protocol: TCP
