appstore-envoy-kelon-kube-mgmt-example/manifests/configmaps-appstore.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: init-postgres
  namespace: appstore
data:
  Init-Postgres.sql: "DROP SCHEMA IF EXISTS \"appstore\";\nCREATE SCHEMA \"appstore\";"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: appstore-backend-config
  namespace: appstore
data:
  JDBC_DATABASE_URL: "jdbc:postgresql://postgres-postgresql.appstore.svc.cluster.local:5432/appstore"
  JDBC_DATABASE_USERNAME: You
  JDBC_DATABASE_PASSWORD: SuperSecure
  OPA_URL: "http://kelon.kelon.svc.cluster.local:8181/v1/data/http/authz/allow"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: appstore-frontend-config
  namespace: appstore
data:
  BACKEND_URL: "http://localhost:8080"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: proxy-config
  namespace: appstore
data:
  envoy.yaml: |-
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: service
                    http_filters:
                      - name: envoy.ext_authz
                        config:
                          with_request_body:
                            max_request_bytes: 8192
                            allow_partial_message: true
                          failure_mode_allow: false
                          grpc_service:
                            google_grpc:
                              target_uri: "http://kelon.kelon.svc.cluster.local:9191"
                              stat_prefix: ext_authz
                            timeout: 0.5s
                      - name: envoy.router
                        typed_config: {}
      clusters:
        - name: service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 8080
