appstore-envoy-kelon-kube-mgmt-example/manifests/configmaps-envoy.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: appstore
data:
  envoy.yaml: |-
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains:
                            - "*"
                          cors:
                            allow_origin_string_match:
                              - safe_regex:
                                  google_re2: {}
                                  regex: \*
                            allow_methods: "*"
                            allow_headers: "*"
                            filter_enabled:
                              default_value:
                                numerator: 100
                                denominator: HUNDRED
                              runtime_key: cors.www.enabled
                            shadow_enabled:
                              default_value:
                                numerator: 0
                                denominator: HUNDRED
                              runtime_key: cors.www.shadow_enabled
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: service
                    http_filters:
                      - name: envoy.cors
                        typed_config: {}
                      - name: envoy.filters.http.jwt_authn
                        config:
                          providers:
                            provider1:
                              issuer: "https://dev-kelon.eu.auth0.com/"
                              remote_jwks:
                                http_uri:
                                  uri: "https://dev-kelon.eu.auth0.com/.well-known/jwks.json"
                                  cluster: auth0
                                  timeout:
                                    seconds: 5
                          rules:
                            - match:
                                prefix: /actuator/health
                            - match:
                                prefix: /api/login
                            - match:
                                prefix: /api/apps
                              requires:
                                provider_name: provider1
                      - name: envoy.ext_authz
                        config:
                          with_request_body:
                            max_request_bytes: 8192
                            allow_partial_message: true
                          failure_mode_allow: false
                          grpc_service:
                            google_grpc:
                              target_uri: "kelon.kelon.svc.cluster.local:9191"
                              stat_prefix: ext_authz
                            timeout: 0.5s
                      - name: envoy.router
                        typed_config: {}
      clusters:
        - name: service
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: appstore-backend-service.appstore.svc.cluster.local
                          port_value: 8080
        - name: auth0
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          load_assignment:
            cluster_name: auth0
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: dev-kelon.eu.auth0.com
                          port_value: 443
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
              common_tls_context:
                validation_context:
                  trusted_ca:
                    filename: "/etc/ssl/certs/ca-certificates.crt"
              sni: dev-kelon.eu.auth0.com
