appstore-envoy-kelon-kube-mgmt-example/manifests/kube-mgmt-deployment.yml
# Grant OPA/kube-mgmt read-only access to resources. This lets kube-mgmt
# list configmaps to be loaded into OPA as policies.
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: kelon-viewer
roleRef:
  kind: ClusterRole
  name: view
  apiGroup: rbac.authorization.k8s.io
subjects:
  - kind: Group
    name: system:serviceaccounts:kelon
    apiGroup: rbac.authorization.k8s.io
---
# Create kelon namespace
kind: Namespace
apiVersion: "v1"
metadata:
   name: kelon
   labels:
     name: kelon
---
# Define role for OPA/kube-mgmt to update configmaps with policy status.
kind: Role
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  namespace: kelon
  name: configmap-modifier
rules:
  - apiGroups: [""]
    resources: ["configmaps"]
    verbs: ["update", "patch"]
---
# Grant OPA/kube-mgmt role defined above.
kind: RoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  namespace: kelon
  name: opa-configmap-modifier
roleRef:
  kind: Role
  name: configmap-modifier
  apiGroup: rbac.authorization.k8s.io
subjects:
  - kind: Group
    name: system:serviceaccounts:kelon
    apiGroup: rbac.authorization.k8s.io
---
# Deploy OPA and kube-mgmt.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kelon
  namespace: kelon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kelon
  template:
    metadata:
      labels:
        app: kelon
    spec:
      containers:
        - name: kelon
          image: kelonio/kelon:latest
          args:
            - "--port=8181"
            - "--opa-conf=/conf/opa.yml"
            - "--api-conf=/conf/api.yml"
            - "--datastore-conf=/conf/datastore.yml"
            - "--rego-dir=/policies"
            - "--config-watcher-path=/policies"
            - "--envoy-port=9191"
          ports:
            - name: http
              containerPort: 8181
            - name: envoy-auth
              containerPort: 9191
          volumeMounts:
            - name: config-volume
              mountPath: /conf
            - name: policy-volume
              mountPath: /policies
            - name: call-operands-volume
              mountPath: /call-operands
        - name: kube-mgmt
          image: openpolicyagent/kube-mgmt:0.10
      volumes:
        - name: config-volume
          configMap:
            name: kelon-configs
        - name: policy-volume
          configMap:
            name: kelon-policies
        - name: call-operands-volume
          configMap:
            name: call-operands
---
# Add service that exposes OPA
apiVersion: v1
kind: Service
metadata:
  name: kelon
  namespace: kelon
  labels:
    name: kelon
spec:
  ports:
    - name: http
      port: 8181
      protocol: TCP
    - name: envoy-auth
      port: 9191
      protocol: TCP
  selector:
    app: kelon
